--- a/src/app/residence/residence.component.html
+++ b/src/app/residence/residence.component.html
@@ -1,3 +1,11 @@
+<br>
+<br>
+<button (click)="redirect()">redirect to form</button>
+<br>
+
+<button (click)="somme()">getnumber</button>
+<div class="alert alert-danger" *ngIf="s">la somme:{{s}}</div>
+<br>
 <table border="3">
     <tr>
         <td>id</td>
