--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/residence">Residence</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/annonce">annoce</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/annonce/list">list</a>
+      </li>
     </ul>
   </div>
 </nav>
