--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,9 @@
         <a class="nav-link" routerLink="/residence">Residence</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/appartment">appartment</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/annonce">annoce</a>
       </li>
       <li class="nav-item">
